--- a/src/classes/DataController.cls
+++ b/src/classes/DataController.cls
@@ -4,7 +4,9 @@
 * @description 	Interacts with the Salesforce data layer to create, retrieve, update, and delete
 *				records.  Consumers communicate with the DataController using ActionDataObjects.  
 *				All CRUD operations are performed in the context of the current Salesforce organization.
-*				IMPORTANT: The caller should first inspect for any ActionDataObject.Errors on the returned data.
+*				IMPORTANT: 
+*					1. The caller should first inspect for any ActionDataObject.Errors on the returned data.
+*					2. Only SOQL queries are supported by the Read operations 
 */
 public class DataController {
     
@@ -26,6 +28,13 @@ public class DataController {
     	try {
     		if(COM_Utils.isNotEmpty(sourceData)) {
     			
+    			
+    			/*
+	    		*	Since sObjects Event_Queue & Action_Queue aren't defined for this SF org yet, will compare with sObject name & not instanceof keyword 
+	    		*/
+	    		//if('Event_Queue'.equalIgnoreCase(result.SourceObject)) {
+		    	//	result.EventQueueId = String.valueOf(Event_Queue.Id);	
+		    	//}
     		}
     	} catch (Exception ex) {
     		LOGGER.error(ex);
@@ -39,7 +48,12 @@ public class DataController {
     }
     
     /**
-	* @description	Fetches the Salesforce record
+	* @description	Fetches the Salesforce record by applying the below rules:
+	*				1. A query is generated per #getQuery() method
+	*				2. The query's result set will be used to create a new ActionDataObject
+	*				3. "SourceObject" will be the queryDefinition.TargetObject
+	*				4. The "name" set from original Response section will become the list of fields in the queryDefinition."NewData" records.
+	*				5. Each field will receive the value of the corresponding fetched record's field, identified by the value's "key". Taken care by #ReadData(queryString)
 	* @author	Sukrut Wagh
 	* @version	11/17/2015
 	* @param	ActionDataObject queryDefinition
@@ -52,16 +66,85 @@ public class DataController {
     	ActionDataObject result = null;
         List<String> errors = new List<String>();
     	try {
-    		String queryString = '';
+    		String queryString = getQuery(queryDefinition);
     		result = ReadData(queryString);
+    		if(COM_Utils.isNotEmpty(result)) {
+    			if(COM_Utils.isNotEmpty(queryDefinition.TargetObject)) {
+	    			result.SourceObject = queryDefinition.TargetObject;
+    			}
+    			if(isValidQueryDefinition(queryDefinition)) {
+    				Map<String, String> responseMap = new Map<String, String>();
+	    			 Set<String> fieldKeys= queryDefinition.Response.keySet();
+	    			 for(String fieldKey : fieldKeys) {
+	    			 	responseMap.put(queryDefinition.Response.get(fieldKey),'');
+	    			 }
+	    			 result.Response = responseMap;
+    			}
+    		}
     	} catch (Exception ex) {
     		LOGGER.error(ex);
             errors.add(LOGGER.getLastLogMsg());
     	} finally {
     		result = setErrors(errors,result);
     	}
+    	LOGGER.debug('result:'+result);
     	LOGGER.exit(methodName);
     	return result;
+    }
+    
+    /**
+	* @description	Generates a valid Salesforce query by applying the below rules:
+	*				1. queryDefinition.SourceObject is the SObject from which to retrieve data
+	*				2. The "value" set from queryDefinition.Response name+value pairs will be the list of fields to retrieve
+	*				3. The name+value pairs in Records[0].NewData will create a "WHERE" clause where the logical operator joining each field filter is "AND."
+	* @author	Sukrut Wagh
+	* @version	11/19/2015
+	* @param	ActionDataObject queryDefinition
+	* @return	String query 
+	*/
+    public static String getQuery(final ActionDataObject queryDefinition) {
+    	String methodName = 'getQuery';
+		LOGGER.entry(methodName);
+    	String query = null;
+    	if(isValidQueryDefinition(queryDefinition)) {
+    		
+    		al.AndCondition andCond = new al.AndCondition();
+            Map<String, String> fieldNameValueMap = queryDefinition.Records[0].NewData;
+            Set<String> fieldNames = fieldNameValueMap.keySet();
+            for(String fieldName:	fieldNames) {
+            	andCond.add(new al.FieldCondition(fieldName,al.Operator.EQUALS,fieldNameValueMap.get(fieldName)));
+            }
+    		query = new al.SoqlBuilder()
+                .selectx(queryDefinition.Response.values())
+                .fromx(queryDefinition.SourceObject)
+                .wherex(andCond).toSoql();
+    	} else {
+    		//TODO: Would be useful to respond with an error indicating a valid SOQL couldn't be formed 
+    	}
+    	LOGGER.debug(query);
+    	LOGGER.exit(methodName);
+    	return query;
+    }
+    
+    /**
+    * @description	Checks if necessary feilds to generate a SOQL query are present
+	* @author	Sukrut Wagh
+	* @version	11/19/2015
+	* @param	ActionDataObject queryDefinition
+	* @return	Boolean valid
+	*/
+    public static boolean isValidQueryDefinition(final ActionDataObject queryDefinition) {
+    	String methodName = 'isValidQueryDefinition';
+		LOGGER.entry(methodName);
+    	boolean valid = false;
+    	if(COM_Utils.isNotEmpty(queryDefinition) && COM_Utils.isNotEmpty(queryDefinition.SourceObject) 
+    		&& COM_Utils.isNotEmpty(queryDefinition.Response) && (!queryDefinition.Response.isEmpty())
+    		&& COM_Utils.isNotEmpty(queryDefinition.Records)) {
+    		valid = true;
+    	}
+    	LOGGER.debug('isValidQueryDefinition:'+valid);
+    	LOGGER.exit(methodName);
+    	return valid;
     }
     
     /**
@@ -149,6 +232,7 @@ public class DataController {
 	    		if(COM_Utils.isNotEmpty(sObj) && COM_Utils.isNotEmpty(sObjList[0])) {
 	    			record = new ActionDataRecord();
 	    			record.SourceRecordId = String.valueOf(sObj.get('Id'));
+	    			
 	    			dataMap = new Map<String, String>();
 	    		    /*
 	    			*	Note: Using Map<String,Object> dataMap = JSON.deserializeUntyped(JSON.serialize(sObj)):
